--- a/ArcTouch.Cinephile.Android/ArcTouch.Cinephile.Android.csproj
+++ b/ArcTouch.Cinephile.Android/ArcTouch.Cinephile.Android.csproj
@@ -144,6 +144,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\powered.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\search.png" />
+  </ItemGroup>
   <Import Project="..\ArcTouch.Cinephile\ArcTouch.Cinephile.projitems" Label="Shared" Condition="Exists('..\ArcTouch.Cinephile\ArcTouch.Cinephile.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
